plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.7'

	// Code Quality
	id 'checkstyle'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.hotspot'
version = '0.0.1-SNAPSHOT'
description = 'Hotspot Usage Worker'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

springBoot{
	mainClass = 'hotspot.worker.WorkerApplication'
}

repositories {
	mavenCentral()
}

/* =========================
   Dependencies
========================= */
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-json'

	// DB (PostgreSQL)
	runtimeOnly 'org.postgresql:postgresql'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

/* =========================
   Test
========================= */
tasks.named('test') {
	useJUnitPlatform()
}

/* =========================
   Spotless
========================= */
spotless {
	java {
		target 'src/**/*.java'
		indentWithSpaces(4)

		trimTrailingWhitespace()
		endWithNewline()

		importOrder(
				'java',
				'javax',
				'jakarta',
				'org',
				'com',
				''
		)
		removeUnusedImports()
	}
}

/* =========================
   Checkstyle
========================= */
checkstyle {
	toolVersion = "10.12.5"
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

tasks.withType(Checkstyle).configureEach {
	reports {
		xml.required = false
		html.required = true
	}
}

/* =========================
   CI Gate
========================= */
check.dependsOn(
		spotlessCheck,
		checkstyleMain
)
